fix z-index modal

--- a/src/shared/components/modal/modal.component.scss
+++ b/src/shared/components/modal/modal.component.scss
@@ -3,7 +3,7 @@
 .modal {
     @include flex(center, center);
     position: fixed;
-    z-index: 99;
+    z-index: 999;
     top: 0;
     left: 0;
     right: 0;
